# cecs-574-dist-computing-project

./: .gitignore  README.md  collect_metrics.py  compare_results.py  comparison_analysis.ipynb  final_model.pt  nodes_fast.json  nodes_medium.json  nodes_slow.json  pyproject.toml  pyproject.toml.baseline  pyproject.toml.baseline.fast  pyproject.toml.baseline.medium  pyproject.toml.baseline.slow  pyproject.toml.hardware-aware  pyproject.toml.hardware-aware.fast  pyproject.toml.hardware-aware.medium  pyproject.toml.hardware-aware.slow  run_comparison.py  switch_config.py  visualize_comparison.py
cecs_574_dist_computing_project/: __init__.py  client_app.py  hardware_profiles.py  metrics_analysis.ipynb  server_app.py  task.py
results/: metrics.csv
