# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cecs-574-dist-computing-project"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.23.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "nhefner"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "cecs_574_dist_computing_project.server_app:app"
clientapp = "cecs_574_dist_computing_project.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-train = 0.2
local-epochs = 1
lr = 0.01
hardware-aware = true
num-supernodes = 10 


[tool.flwr.app.hardware-profiles]

cpu-slow.local-epochs = 1
cpu-slow.batch-size = 16
cpu-slow.lr = 0.005
cpu-slow.speed = 0.5       # <--- NEW: relative training speed slowdown
cpu-slow.power = 12.0      # <--- NEW: energy cost per second
cpu-slow.latency = 0.08    # <--- NEW: artificial slow network

cpu-medium.local-epochs = 1
cpu-medium.batch-size = 32
cpu-medium.lr = 0.01
cpu-medium.speed = 1.0
cpu-medium.power = 10.0
cpu-medium.latency = 0.02

gpu.local-epochs = 2
gpu.batch-size = 64
gpu.lr = 0.02
gpu.speed = 2.5            # <--- Faster training
gpu.power = 35.0           # <--- Higher energy draw
gpu.latency = 0.01

[tool.flwr.federations.local-simulation.node-config]
0.hardware = "gpu"
1.hardware = "cpu-medium"
2.hardware = "cpu-medium"
3.hardware = "cpu-slow"
4.hardware = "cpu-slow"
5.hardware = "cpu-slow"
6.hardware = "cpu-slow"
7.hardware = "cpu-medium"
8.hardware = "gpu"
9.hardware = "cpu-slow"

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
