# =====================================================================
# Configuration Structure:
# - This file (pyproject.toml) is the active configuration
# - pyproject.toml.baseline: Baseline experiment template
# - pyproject.toml.hardware-aware: Hardware-aware experiment template
# - *.fast, *.medium, *.slow: Speed variants (used by switch_config.py)
#
# Use 'python switch_config.py {fast|medium|slow}' to switch configurations
# Use 'python run_comparison.py' to run both experiments
#
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cecs-574-dist-computing-project"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.23.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "nhefner"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "cecs_574_dist_computing_project.server_app:app"
clientapp = "cecs_574_dist_computing_project.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10  # Balanced for research: good results in reasonable time
fraction-train = 0.3  # Reduced to run fewer clients in parallel (saves memory)
local-epochs = 2  # Balanced: good learning without being too slow
lr = 0.001
hardware-aware = false  # <--- BASELINE: No hardware awareness
experiment-name = "baseline"  # <--- For comparison
num-supernodes = 10

# Baseline: All clients use uniform settings
# (hardware profiles are ignored when hardware-aware = false)

[tool.flwr.federations.local-simulation.node-config]
# In baseline mode, hardware assignments are ignored
# All clients use the same uniform settings
0.hardware = "cpu-medium"
1.hardware = "cpu-medium"
2.hardware = "cpu-medium"
3.hardware = "cpu-medium"
4.hardware = "cpu-medium"
5.hardware = "cpu-medium"
6.hardware = "cpu-medium"
7.hardware = "cpu-medium"
8.hardware = "cpu-medium"
9.hardware = "cpu-medium"

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
# Memory optimization: fraction-train=0.3 limits to ~3 clients in parallel

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
